--- a/src/lib/template/echo_board.tmpl
+++ b/src/lib/template/echo_board.tmpl
@@ -2,7 +2,7 @@
 <% skin my_skin %>
 <% view echo_board uses Content::echoBoard extends board %>
 
-<% template customPostFormField3(std::string) %>
+<% template customPostFormField3() %>
 <tr>
     <td class="postformLabel">
         <b><%= postFormLabelLink %></b>
