--- a/src/lib/template/search.tmpl
+++ b/src/lib/template/search.tmpl
@@ -26,6 +26,11 @@
                     }
                 }
             };
+
+            window.addEventListener("load", function load() {
+                window.removeEventListener("load", load, false);
+                lord.setSearchQuery();
+            }, false);
         </script>
     </head>
     <body>
