--- a/src/lib/template/pr_thread.tmpl
+++ b/src/lib/template/pr_thread.tmpl
@@ -3,7 +3,7 @@
 <% view pr_thread uses Content::prThread extends thread %>
 
 <% template captchaField() %>
-<div id="googleCaptcha" class="codechaContainer">
+<div id="captcha" class="codechaContainer">
     <script type="text/javascript" src="//codecha.org/api/challenge?k=<%= codechaPublicKey %>"></script>
 </div>
 <% end template %>
