--- a/src/lib/ololord_res.qrc
+++ b/src/lib/ololord_res.qrc
@@ -5,5 +5,6 @@
         <file>res/ip_country_code_map.txt</file>
         <file>res/ip_city_name_map.txt</file>
         <file>res/city_name_timezone_map.txt</file>
+        <file>res/yandex_captcha_script.js</file>
     </qresource>
 </RCC>
