Implement post counting system

--- a/src/lib/template/11_board.tmpl
+++ b/src/lib/template/11_board.tmpl
@@ -121,6 +121,12 @@
         <% include pages() %>
         <hr />
         <% include navbar() %>
+        <% if ( content.postingEnabled ) %>
+            <hr />
+            <div class="navbar">
+                <span class="navbarItem">[<%= postingSpeedText %> <%= postingSpeed %>]</span>
+            </div>
+        <% end %>
         <a id="bottom"></a>
     </body>
 </html>
