Improve complain button surprize

--- a/src/lib/ololord_static_video.qrc
+++ b/src/lib/ololord_static_video.qrc
@@ -3,5 +3,6 @@
         <file>static/video/friendship_is_magic_1.webm</file>
         <file>static/video/friendship_is_magic_2.webm</file>
         <file>static/video/bombanoolow.webm</file>
+        <file>static/video/fail.webm</file>
     </qresource>
 </RCC>
