Implement YouTube video embedding

--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -451,6 +451,8 @@
 <input type="hidden" id="captchaQuotaText" value="<%= captchaQuotaText %>" />
 <input type="hidden" id="postFormButtonSubmit" value="<%= postFormButtonSubmit %>" />
 <input type="hidden" id="postFormButtonSubmitSending" value="<%= postFormButtonSubmitSending %>" />
+<input type="hidden" id="collapseVideoText" value="<%= collapseVideoText %>" />
+<input type="hidden" id="expandVideoText" value="<%= expandVideoText %>" />
 <select id="availableBoardsSelect" class="select" style="display: none;">
     <%foreach board in availableBoards %>
         <% item %>
