--- a/src/lib/static/css/photon.css
+++ b/src/lib/static/css/photon.css
@@ -20,8 +20,18 @@ a {
     color: #FF6600;
 }
 
+a.expandCollapse {
+    color: #444444;
+    cursor: pointer;
+}
+
 a:hover {
     color: #0066FF;
+}
+
+a.expandCollapse:hover {
+    color: #666666;
+    cursor: pointer
 }
 
 hr {
