Use YouTube API v3

--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -453,6 +453,7 @@
 <input type="hidden" id="postFormButtonSubmitSending" value="<%= postFormButtonSubmitSending %>" />
 <input type="hidden" id="collapseVideoText" value="<%= collapseVideoText %>" />
 <input type="hidden" id="expandVideoText" value="<%= expandVideoText %>" />
+<input type="hidden" id="youtubeApiKey" value="<%= youtubeApiKey %>" />
 <select id="availableBoardsSelect" class="select" style="display: none;">
     <%foreach board in availableBoards %>
         <% item %>
