--- a/src/lib/template/markup.tmpl
+++ b/src/lib/template/markup.tmpl
@@ -71,6 +71,14 @@
             <a href="javascript:void(0);">&gt;&gt;1675284</a> <%= postLinkDescription %>
             <br /><br />
             <a href="javascript:void(0);">&gt;&gt;/h/127154</a> <%= postBoardLinkDescription %>
+            <br /><br />
+            example.com --&gt; <a href="http://example.com">example.com</a>
+            <br /><br />
+            example1.com, (example2.com) --&gt; <a href="http://example1.com,">example1.com,</a> <a href="http://example2.com)">example2.com)</a>
+            <br /><br />
+            [url]example1.com[/url], ([url]example2.com[/url]) --&gt; <a href="http://example.com">example1.com</a>, (<a href="http://example.com">example2.com</a>)
+            <br /><br />
+            user@example.com --&gt; <a href="mailto:user@example.com">user@example.com</a>
         </div>
         <div class="sectionHeader">
             <h3><%= codeMarkup %></h3>
