--- a/src/lib/template/markup.tmpl
+++ b/src/lib/template/markup.tmpl
@@ -74,7 +74,7 @@
             <br /><br />
             example.com --&gt; <a href="http://example.com">example.com</a>
             <br /><br />
-            example1.com, (example2.com) --&gt; <a href="http://example1.com,">example1.com,</a> <a href="http://example2.com)">example2.com)</a>
+            example1.com, (example2.com) --&gt; <a href="http://example1.com,">example1.com,</a> (<a href="http://example2.com)">example2.com)</a>
             <br /><br />
             [url]example1.com[/url], ([url]example2.com[/url]) --&gt; <a href="http://example.com">example1.com</a>, (<a href="http://example.com">example2.com</a>)
             <br /><br />
